<resources>
    <string name="app_name">News Feed</string>
    <string name="Key">https://content.guardianapis.com/search?api-key=20c97de9-c4d9-48f2-a26c-be0282e5d185&amp;show-references=author&amp;order-date=published</string>
    <string name="title">Title</string>
    <string name="date">Date</string>
    <string name="section">Section</string>
    <string name="author">Author</string>
    <string name="noConn">No Connection</string>
    <string name="empty">The List is Empty</string>

    <string name="setting">Settings</string>
    <string name="pageNum">The Page Number</string>
    <string name="keyPage" translatable="false">pageNum</string>
    <string name="defPage" translatable="false">1</string>

    <string name="resultNum">The result per page</string>
    <string name="keyResult" translatable="false">resultNum</string>
    <string name="defResult" translatable="false">10</string>

    <string name="listSection">News Section</string>
    <string name="keySection">keySection</string>
    <string name="summrySection">Select the Section you want to read</string>
    <string name="allSection">\-b</string>
</resources>
