<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/setting">

    <EditTextPreference
        android:defaultValue="@string/defPage"
        android:inputType="numberDecimal"
        android:key="@string/keyPage"
        android:selectAllOnFocus="true"
        android:title="@string/pageNum" />
    <EditTextPreference
        android:defaultValue="@string/defResult"
        android:inputType="numberDecimal"
        android:key="@string/keyResult"
        android:selectAllOnFocus="true"
        android:title="@string/resultNum" />
    <ListPreference
        android:defaultValue="@string/allSection"
        android:entries="@array/sectionNames"
        android:entryValues="@array/sectionValues"
        android:key="@string/keySection"
        android:summary="@string/summrySection"
        android:title="@string/listSection" />

</PreferenceScreen>